--- a/Restaurant/FARO/styles.css
+++ b/Restaurant/FARO/styles.css
@@ -659,7 +659,7 @@ body {
 .tarjeta-plato.destacado::before {
   content: "RECOMENDADO";
   position: absolute;
-  top: 15px;
+  top: 50px;
   left: -35px;
   background: var(--naranja-principal);
   color: var(--blanco);
@@ -744,6 +744,14 @@ body {
 
 .plato-descripcion {
   color: var(--gris-oscuro);
+  font-size: 1rem;
+  line-height: 1.6;
+  margin-bottom: 0;
+}
+
+.plato-descripcion-encargo {
+  color: #000000;
+  font: bold;
   font-size: 1rem;
   line-height: 1.6;
   margin-bottom: 0;
@@ -883,28 +891,6 @@ body {
   transition: var(--transicion);
   position: relative;
   overflow: hidden;
-}
-
-.tarjeta-porcion::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 5px;
-  background: linear-gradient(90deg, var(--naranja-principal), var(--azul-principal));
-  transform: scaleX(0);
-  transition: var(--transicion);
-}
-
-.tarjeta-porcion:hover::before {
-  transform: scaleX(1);
-}
-
-.tarjeta-porcion:hover {
-  border-color: var(--naranja-principal);
-  transform: translateY(-8px) scale(1.03);
-  box-shadow: var(--sombra-naranja);
 }
 
 .porcion-icono {
